# magic8ball-api

./: CONTRIBUTING.md  README.md  openapi.yaml
android/: README.md  build.gradle
android/src/main/java/com/apiverve/magic8ball/: APIClient.java  APIException.java  APIResponse.java
android/src/main/java/com/apiverve/magic8ball/data/: ResponseModels.java
examples/: README.md
examples/csharp/: basic.cs
examples/java/: basic.java
examples/javascript/: basic.js  error-handling.js
examples/python/: basic.py
npm/: README.md  index.d.ts  index.js  package.json
npm/examples/: basic.js
nuget/: Magic8-BallAPIClient.cs  Magic8-BallAPIClient.csproj  Magic8-BallAPIClient.sln  Magic8-BallQueryOptions.cs  Readme.md  ResponseObj.cs
python/: README.md  pyproject.toml
python/src/apiverve_magic8-ball/: __init__.py  apiClient.py  exceptions.py  setup.py  setup_dep.py
python/src/apiverve_magic8-ball/tests/: test_api.py
python/tests/: test_api.py
